# euclid

./: .gitignore  Makefile.am  README.md  audio.c  audio.h  configure.ac  euclid_1280x1024  euclid_with_resolution  main.c
